force-app/main/default/objects/Census_Member_Reimagine_POC__c/Census_Member_Reimagine_POC__c.object-meta.xml
<CustomObject>
    <description>This is used in the Reimagine POC and houses the information that comes in from the census data at the member level.</description>
    <label>Group Roster</label>
    <nameField>
        <displayFormat>CMN-{00000000}</displayFormat>
        <label>Census Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Rosters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>