force-app/main/default/objects/Census_Member_Reimagine_POC__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Used for the reimagine POC and will lists the census member&#39;s age.</description>
    <formula>IF( NOT( ISBLANK(  Birthday__c  ) ) ,
  IF( DATE( 2000 , MONTH(  Birthday__c  ) , DAY(  Birthday__c  ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
     YEAR (Today()) - YEAR ( Birthday__c ),
     YEAR (Today()) - YEAR ( Birthday__c ) -1 ),
  null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>