force-app/main/default/objects/Census_Member_Reimagine_POC__c/fields/Birthday__c.field-meta.xml
<CustomField>
    <fullName>Birthday__c</fullName>
    <description>Holds the census member&#39;s birthday</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Birthday</label>
    <type>Date</type>
</CustomField>