force-app/main/default/objects/Census_Member_Reimagine_POC__c/fields/Birthday_Text__c.field-meta.xml
<CustomField>
    <fullName>Birthday_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Birthday Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>