force-app/main/default/objects/Census_Member_Reimagine_POC__c/fields/Census__c.field-meta.xml
<CustomField>
    <fullName>Census__c</fullName>
    <description>Used to connect the census member data to the census in the reimagine POC</description>
    <label>Census</label>
    <referenceTo>Census_Reimagine_POC__c</referenceTo>
    <relationshipName>Census_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>