force-app/main/default/objects/Census_Member_Reimagine_POC__c/fields/eligibility__c.field-meta.xml
<CustomField>
    <fullName>eligibility__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>eligibility</label>
    <length>10</length>
    <type>Text</type>
</CustomField>