force-app/main/default/objects/Census_Member_Reimagine_POC__c/fields/firstName__c.field-meta.xml
<CustomField>
    <fullName>firstName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>firstName</label>
    <length>25</length>
    <type>Text</type>
</CustomField>