force-app/main/default/objects/Census_Member_Reimagine_POC__c/fields/lastName__c.field-meta.xml
<CustomField>
    <fullName>lastName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>lastName</label>
    <length>25</length>
    <type>Text</type>
</CustomField>