force-app/main/default/objects/Census_Member_Reimagine_POC__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>