force-app/main/default/objects/Census_Member_Reimagine_POC__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tier</label>
    <length>10</length>
    <type>Text</type>
</CustomField>